# fraeser

./: .gitignore  README.md  sync.sh
firmware/: Cargo.toml
firmware/samples/: cat.path  circle.path
firmware/src/: cutter.rs  gpio.rs  job.rs  main.rs  turtle.rs  units.rs
hardware/: PINs.md
