[package]
name = "firmware"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
svg2polylines = {git = "https://github.com/sleepy-monax/svg2polylines"}
turtle = "1.0.0-rc.3"
gtk = "0.9.2"
